--- a/.github/workflows/prod_deploy.yaml
+++ b/.github/workflows/prod_deploy.yaml
@@ -7,10 +7,17 @@ jobs:
   invoke-prod-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: "deploy"
+      - name: deploy
         run: |
-          curl --fail --silent --show-error -X POST \
+          echo DEPLOY_BATCH_URL=$(curl --fail --silent --show-error -X POST \
               -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" \
               -H "Content-Type:application/json" \
               -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"], "sha": "${{ github.sha }}"}' \
-              https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy
+              https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy) >> $GITHUB_ENV
+
+      - name: post to Slack
+        run: |
+          curl --fail --silent --show-error -X POST \
+              -H "Content-type: application/json" \
+              -d "{\"text\": \"Deploying Hail Batch: $DEPLOY_BATCH_URL\"}" \
+              ${{ secrets.SLACK_WEBHOOK }}
