[k8s] never delete a secret (#10217)
For some reason we delete secrets when re-creating them. This creates a race condition which Batch
appears to encounter whenever it is under heavy load during a deploy.

@cseed, do you recall why you chose to delete and then use apply in ci/create_database.py?

I am using the command sequence suggested here: https://stackoverflow.com/questions/45879498/how-can-i-update-a-secret-on-kubernetes-when-it-is-generated-from-a-file.

--- a/build.yaml
+++ b/build.yaml
@@ -293,14 +293,18 @@ steps:
      cat > deploy-config.json <<EOF
      {"location":"k8s","default_namespace":"{{ default_ns.name }}","domain":"{{ global.domain }}"}
      EOF
-     kubectl -n {{ default_ns.name }} delete --ignore-not-found secret deploy-config
-     kubectl -n {{ default_ns.name }} create secret generic deploy-config --from-file=./deploy-config.json
+     kubectl -n {{ default_ns.name }} create secret generic deploy-config \
+             --from-file=./deploy-config.json \
+             --save-config --dry-run=client -o yaml \
+         | kubectl -n {{ default_ns.name }} apply -f -
      # gce deploy config
      cat > deploy-config.json <<EOF
      {"location":"gce","default_namespace":"{{ default_ns.name }}","domain":"{{ global.domain }}"}
      EOF
-     kubectl -n {{ default_ns.name }} delete --ignore-not-found secret gce-deploy-config
-     kubectl -n {{ default_ns.name }} create secret generic gce-deploy-config --from-file=./deploy-config.json
+     kubectl -n {{ default_ns.name }} create secret generic gce-deploy-config \
+             --from-file=./deploy-config.json \
+             --save-config --dry-run=client -o yaml \
+         | kubectl -n {{ default_ns.name }} apply -f -
    serviceAccount:
      name: admin
      namespace:
