Support stype_from on sarrays, remove old uses of self_tag, write a basic example in main that gets length of an array, add test_array.cpp

--- a/libhail/CMakeLists.txt
+++ b/libhail/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(test
   src/hail/test_value.cpp
   src/hail/vtype.cpp
   src/hail/vtype.hpp
+  src/hail/test_array.cpp
   # query
   src/hail/query/ir.cpp
   src/hail/query/ir.hpp
