[notebook] fix notebook service to expose nginx and use http with workers

--- a/notebook/nginx.conf
+++ b/notebook/nginx.conf
@@ -76,7 +76,7 @@ http {
           auth_request /auth;
           auth_request_set $auth_pod_ip $upstream_http_pod_ip;
 
-          proxy_pass https://$auth_pod_ip$request_uri;
+          proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
           proxy_http_version 1.1;
@@ -144,7 +144,7 @@ http {
           auth_request /auth;
           auth_request_set $auth_pod_ip $upstream_http_pod_ip;
 
-          proxy_pass https://$auth_pod_ip$request_uri;
+          proxy_pass http://$auth_pod_ip$request_uri;
 
           include /etc/nginx/proxy.conf;
           proxy_http_version 1.1;
