--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -25,7 +25,7 @@ RUN curl -sSLO https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google
     curl -sSLO https://dl.k8s.io/release/v1.19.7/bin/linux/amd64/kubectl && \
     install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 ENV PATH $PATH:/google-cloud-sdk/bin
-RUN gcloud version && kubectl version
+RUN gcloud version && kubectl version --client=true
 
 COPY docker/requirements.txt .
 RUN hail-pip-install -r requirements.txt pyspark==3.1.1
