[shuffler][query] dump hs_err_pid file on segfault
I also fixed controller.sh to properly handle arguments with space. This syntax
is the Bash array syntax, AFAIK, it is the only way to properly save a command string.

--- a/query/deployment.yaml
+++ b/query/deployment.yaml
@@ -76,6 +76,8 @@ spec:
            - /controller.sh
 {% endif %}
            - java
+           - -XX:ErrorFile=hs_err.log
+           - '-XX:OnError=cat hs_err.log >&2'
            - -Dlog4j.configuration=file:/log4j.properties
            - -cp
            - /hail.jar:/usr/local/lib/python3.7/dist-packages/pyspark/jars/*
