--- a/.github/workflows/prod_deploy.yaml
+++ b/.github/workflows/prod_deploy.yaml
@@ -9,11 +9,12 @@ jobs:
     steps:
       - name: deploy
         run: |
-          echo DEPLOY_BATCH_URL=$(curl --fail --silent --show-error -X POST \
+          DEPLOY_BATCH_URL=$(curl --fail --silent --show-error -X POST \
               -H "Authorization: Bearer ${{ secrets.CI_TOKEN }}" \
               -H "Content-Type:application/json" \
               -d '{"steps": ["deploy_auth", "deploy_batch", "deploy_ci", "deploy_notebook", "deploy_query", "deploy_router"], "sha": "${{ github.sha }}"}' \
-              https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy) >> $GITHUB_ENV
+              https://ci.hail.populationgenomics.org.au/api/v1alpha/prod_deploy)
+          echo DEPLOY_BATCH_URL=$DEPLOY_BATCH_URL >> $GITHUB_ENV
 
       - name: post to Slack
         run: |
