[batch] Python jobs (#10206)
* [batch] Python jobs

* attempts to delint

* fix

* fixes?

* delint

* delint

* delint

* fix?

* fix tests

* fix

* fix

* fix tests

* fix and add source

* fixes

* last fix?

* delint

* address some comments

* rewrite

* delint

* delint

* delint

* delint

* delint

* make cleaner

* fix cookbook

--- a/build.yaml
+++ b/build.yaml
@@ -3183,7 +3183,7 @@ steps:
      python3 -m pytest --instafail \
        --doctest-modules \
        --doctest-glob='*.rst' \
-       --ignore=docs/cookbook/files/run_gwas.py \
+       --ignore=docs/cookbook/files/ \
        --ignore=docs/conf.py
    secrets:
     - name: gce-deploy-config
