[libhail] create _hail, the pothon module that exposes libhail
Currently, we're using raw Python C API to expose the module
functionality. And the only thing that's exposed are the primitive
types.

--- a/libhail/CMakeLists.txt
+++ b/libhail/CMakeLists.txt
@@ -3,11 +3,14 @@ cmake_minimum_required(VERSION 3.16)
 # c++20
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+# -fPIC for everything
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # project name
 project(libhail)
 
 find_package(LLVM REQUIRED CONFIG)
+find_package(Python COMPONENTS Interpreter Development)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
@@ -15,13 +18,11 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
-add_executable(test
+set(lib_sources
   src/hail/allocators.cpp
   src/hail/format.cpp
-  src/hail/test_format.cpp
   src/hail/type.cpp
   src/hail/value.cpp
-  src/hail/test_value.cpp
   src/hail/vtype.cpp
   # query
   src/hail/query/ir.cpp
@@ -31,11 +32,30 @@ add_executable(test
   src/hail/query/backend/stype.cpp
   src/hail/query/backend/svalue.cpp
   # runtime
-  src/hail/runtime/runtime.cpp
+  src/hail/runtime/runtime.cpp)
+set(python_module_sources
+  src/hail/python/_hail/module.cpp)
+set(test_sources
+  src/hail/test_format.cpp
+  src/hail/test_value.cpp
   src/hail/test.cpp)
 
-llvm_config(test x86asmparser x86codegen orcjit)
+add_library(hail_objlib OBJECT ${lib_sources})
+add_executable(test $<TARGET_OBJECTS:hail_objlib> ${test_sources})
+add_library(hail_python SHARED
+  $<TARGET_OBJECTS:hail_objlib>
+  ${python_module_sources})
 
+set_target_properties(hail_python
+  PROPERTIES
+    PREFIX ""
+    OUTPUT_NAME "_hail")
+
+llvm_config(test x86asmparser x86codegen orcjit)
+llvm_config(hail_python x86asmparser x86codegen orcjit)
+
+target_include_directories(hail_objlib PRIVATE "src")
+target_include_directories(hail_python PRIVATE ${Python_INCLUDE_DIRS} PRIVATE "src")
 target_include_directories(test PRIVATE "src")
 
-target_link_libraries(test ${llvm_libraries})
+target_link_libraries(hail_python PUBLIC ${Python_LIBRARIES})
