Add machinery for building CMake based python extensions

--- a/libhail/CMakeLists.txt
+++ b/libhail/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.16)
 
+# project name
+project(libhail)
+
 # c++20
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 # -fPIC for everything
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-# project name
-project(libhail)
+set(HAIL_PYTHON_MODULE_NAME "_hail.so" CACHE STRING "full name (including .so) of the hail python module library, useful for python packaging")
+set(HAIL_PYTHON_MODULE_LIBDIR "" CACHE STRING "directory to put the python module library into on install, useful for python packaging")
 
 find_package(LLVM REQUIRED CONFIG)
 find_package(Python COMPONENTS Interpreter Development)
@@ -49,13 +52,15 @@ add_library(hail_python SHARED
 set_target_properties(hail_python
   PROPERTIES
     PREFIX ""
-    OUTPUT_NAME "_hail")
-
-llvm_config(test x86asmparser x86codegen orcjit)
-llvm_config(hail_python x86asmparser x86codegen orcjit)
+    SUFFIX ""
+    OUTPUT_NAME ${HAIL_PYTHON_MODULE_NAME})
 
 target_include_directories(hail_objlib PRIVATE "src")
 target_include_directories(hail_python PRIVATE ${Python_INCLUDE_DIRS} PRIVATE "src")
 target_include_directories(test PRIVATE "src")
 
+llvm_config(test x86asmparser x86codegen orcjit)
+llvm_config(hail_python x86asmparser x86codegen orcjit)
+
 target_link_libraries(hail_python PUBLIC ${Python_LIBRARIES})
+install(TARGETS hail_python LIBRARY DESTINATION ${HAIL_PYTHON_MODULE_LIBDIR})
