[internal-gateway] only limit requests to batch-driver instances

--- a/internal-gateway/internal-gateway.nginx.conf
+++ b/internal-gateway/internal-gateway.nginx.conf
@@ -8,7 +8,12 @@ map $http_x_forwarded_proto $updated_scheme {
      '' $scheme;
 }
 
-limit_req_zone global zone=limit:1m rate=10r/s;
+map $service $batch_driver_limit_key {
+    "batch-driver" "$namespace";
+    default "";  # no key => no limit
+}
+
+limit_req_zone $batch_driver_limit_key zone=batch_driver:1m rate=10r/s;
 
 server {
     server_name internal.hail;
@@ -17,10 +22,10 @@ server {
     listen [::]:80;
 
     location ~ ^/([^/]+)/([^/]+) {
-    	limit_req zone=limit burst=20 nodelay;
-
         set $namespace $1;
         set $service $2;
+
+        limit_req zone=batch_driver burst=20 nodelay;
 
         resolver kube-dns.kube-system.svc.cluster.local;
         proxy_pass https://$service.$namespace.svc.cluster.local;
@@ -47,7 +52,9 @@ server {
     listen [::]:80 default_server;
 
     location / {
-    	limit_req zone=limit burst=20 nodelay;
+        set $namespace default;
+
+        limit_req zone=batch_driver burst=20 nodelay;
 
         resolver kube-dns.kube-system.svc.cluster.local;
         proxy_pass https://$service.default.svc.cluster.local;
@@ -73,10 +80,10 @@ server {
     listen [::]:443 ssl;
 
     location ~ ^/([^/]+)/([^/]+) {
-        limit_req zone=limit burst=20 nodelay;
-
         set $namespace $1;
         set $service $2;
+
+        limit_req zone=batch_driver burst=20 nodelay;
 
         resolver kube-dns.kube-system.svc.cluster.local;
         proxy_pass https://$service.$namespace.svc.cluster.local;
@@ -103,7 +110,9 @@ server {
     listen [::]:443 ssl default_server;
 
     location / {
-        limit_req zone=limit burst=20 nodelay;
+        set $namespace default;
+
+        limit_req zone=batch_driver burst=20 nodelay;
 
         resolver kube-dns.kube-system.svc.cluster.local;
         proxy_pass https://$service.default.svc.cluster.local;
