--- a/hail/python/MANIFEST.in
+++ b/hail/python/MANIFEST.in
@@ -5,3 +5,4 @@ include hail/backend/hail-all-spark.jar
 include hailtop/hail_version
 include hailtop/hailctl/deploy.yaml
 include hailtop/py.typed
+include requirements.txt
