--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -53,6 +53,16 @@ spec:
 {% endif %}
            - name: HAIL_GCP_PROJECT
              value: "{{ global.project }}"
+           - name: HAIL_DOCKER_PREFIX
+             valueFrom:
+               secretKeyRef:
+                 name: global-config
+                 key: docker_prefix
+           - name: HAIL_DOCKER_ROOT_IMAGE
+             valueFrom:
+               secretKeyRef:
+                 name: global-config
+                 key: docker_root_image
            - name: HAIL_GCP_ZONE
              value: "{{ global.zone }}"
            - name: HAIL_CI_UTILS_IMAGE
