--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -9,6 +9,8 @@ async-timeout==3.0.1
 asyncinit==0.2.4
 Authlib==0.11
 black==20.8b1
+boto3==1.17.54
+botocore==1.20.54
 curlylint==0.12.0
 decorator==4.4.0
 dictdiffer==0.8.1
