--- a/hail/python/requirements.txt
+++ b/hail/python/requirements.txt
@@ -2,6 +2,8 @@ aiohttp==3.7.4
 aiohttp_session>=2.7,<2.8
 asyncinit>=0.2.4,<0.3
 bokeh>1.3,<2.0
+boto3>=1.17,<2.0
+botocore>=1.20,<2.0
 decorator<5
 Deprecated>=1.2.10,<1.3
 dill>=0.3.1.1,<0.4
