[query,batch] VEP

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -94,3 +94,13 @@ clean:
 
 publish-public-images:
 	bash publish-public-images.sh $(DOCKER_PREFIX)
+
+vep-grch37:
+	-docker pull konradjk/vep85_loftee:1.0.3
+	docker build -t gcr.io/hail-vdc/vep-test/grch37/vep85_loftee:1.0.3 -t vep-test-grch37 -f vep/Dockerfile.GRCh37 --cache-from konradjk/vep85_loftee:1.0.3,vep-test-grch37 .
+	docker push gcr.io/hail-vdc/vep-test/grch37/vep85_loftee:1.0.3
+
+vep-grch38:
+	-docker pull konradjk/vep95_loftee:0.2
+	docker build -t gcr.io/hail-vdc/vep-test/grch38/vep95_loftee:0.2 -t vep-test-grch38 -f vep/Dockerfile.GRCh38 --cache-from konradjk/vep95_loftee:0.2,vep-test-grch38 .
+	docker push gcr.io/hail-vdc/vep-test/grch38/vep95_loftee:0.2
