--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -29,6 +29,7 @@ google-cloud-logging==1.12.1
 google-cloud-storage==1.25.0
 humanize==1.0.0
 hurry.filesize==0.9
+janus==0.6.1
 Jinja2==2.11.3
 # keyrings.alt>3.1: https://bugs.launchpad.net/usd-importer/+bug/1794041/comments/6
 keyrings.alt>=3.1
