--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -81,6 +81,13 @@ steps:
       - base_image
       - test_clashing_basenames_setup
   - kind: buildImage
+    name: docker_file_in_inputs_test_image
+    dockerFile: inputs/docker/hail-ubuntu/Dockerfile
+    contextPath: inputs/docker/hail-ubuntu
+    inputs:
+      - from: /repo/docker/hail-ubuntu
+        to: /inputs/docker/hail-ubuntu
+  - kind: buildImage
     name: service_base_image
     dockerFile: docker/Dockerfile.service-base
     contextPath: .
