--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -89,6 +89,13 @@ steps:
     dependsOn:
       - copy_files
   - kind: buildImage
+    name: docker_file_in_inputs_test_image
+    dockerFile: inputs/docker/hail-ubuntu/Dockerfile
+    contextPath: inputs/docker/hail-ubuntu
+    inputs:
+      - from: /repo/docker/hail-ubuntu
+        to: /inputs/docker/hail-ubuntu
+  - kind: buildImage
     name: service_base_image
     dockerFile: docker/Dockerfile.service-base
     contextPath: .
