depend on code to be copied

--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -87,6 +87,8 @@ steps:
     inputs:
       - from: /repo/docker/hail-ubuntu
         to: /inputs/docker/hail-ubuntu
+    dependsOn:
+      - code
   - kind: buildImage
     name: service_base_image
     dockerFile: docker/Dockerfile.service-base
