--- a/build.yaml
+++ b/build.yaml
@@ -3670,6 +3670,11 @@ steps:
           --format="table[no-heading](zone.basename(), name)" \
           --project {{ global.project }} \
         | xargs -n2 -r sh -c 'gcloud -q compute instances delete --zone "$1" --project {{ global.project }} "$2" || true' argv0
+      gcloud -q compute disks list \
+          --filter 'labels.batch=1 AND labels.namespace={{ default_ns.name }}' \
+          --format="table[no-heading](zone.basename(), name)" \
+          --project {{ global.project }} \
+        | xargs -n2 -r sh -c 'gcloud -q compute disks delete --zone "$1" --project {{ global.project }} "$2" || true' argv0
     secrets:
       - name: test-gsa-key
         namespace:
