--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -82,11 +82,11 @@ steps:
       - test_clashing_basenames_setup
   - kind: buildImage
     name: docker_file_in_inputs_test_image
-    dockerFile: inputs/docker/hail-ubuntu/Dockerfile
-    contextPath: .
+    dockerFile: hail-ubuntu/Dockerfile
+    contextPath: hail-ubuntu
     inputs:
       - from: /repo/docker/hail-ubuntu
-        to: /inputs/docker/hail-ubuntu
+        to: /hail-ubuntu
     dependsOn:
       - copy_files
   - kind: buildImage
