--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -3,7 +3,7 @@ steps:
     name: default_ns
     namespaceName: default
     public: true
-  - kind: buildImage
+  - kind: buildImage2
     name: inline_image
     dockerFile:
       inline: |
@@ -80,23 +80,13 @@ steps:
     dependsOn:
       - base_image
       - test_clashing_basenames_setup
-  - kind: buildImage
+  - kind: buildImage2
     name: docker_file_in_inputs_test_image
-    dockerFile: hail-ubuntu/Dockerfile
-    contextPath: hail-ubuntu
+    dockerFile: /io/hail-ubuntu/Dockerfile
+    contextPath: /io/hail-ubuntu
     inputs:
-      - from: /repo/docker/hail-ubuntu/Dockerfile
-        to: /Dockerfile
-      - from: /repo/docker/hail-ubuntu/controller.sh
-        to: /controller.sh
-      - from: /repo/docker/hail-ubuntu/hail-apt-get-install
-        to: /hail-apt-get-install
-      - from: /repo/docker/hail-ubuntu/hail-pip-install
-        to: /hail-pip-install
-      - from: /repo/docker/hail-ubuntu/pip.conf
-        to: /pip.conf
-      - from: /repo/docker/hail-ubuntu/retry
-        to: /retry
+      - from: /repo/docker/hail-ubuntu
+        to: /io/hail-ubuntu
     dependsOn:
       - copy_files
   - kind: buildImage
